# Cortex

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
dremio/: dremio.conf  nginx.conf  setup-minio-source.sh
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChartRenderer.jsx  ChatInterface.jsx  CortexLogo.jsx  CortexLogo3D.jsx  NeuralNetworkBackground.jsx  Sidebar.jsx  ThemeToggle.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/hooks/: useTypewriter.js
frontend/src/pages/: AIPage.jsx  AnalyticsPage.jsx  BIDashboardPage.jsx  BIPage.jsx  BISelfServicePage.jsx  ChatPage.jsx  ComparisonPage.jsx  DashboardPage.jsx  DataQualityPage.jsx  DocumentsPage.jsx  ExtractPage.jsx  LandingPage.jsx  ReportsPage.jsx  SummarizationPage.jsx
src/cortex/: __init__.py  conftest.py  main.py  startup.py
src/cortex/agents/: __init__.py  llm.py
src/cortex/agents/smart_router/: __init__.py  config.py  embeddings.py  graph.py  state.py  utils.py
src/cortex/agents/smart_router/nodes/: __init__.py  classification.py  context.py  extraction.py  learning.py  storage.py
src/cortex/database/: __init__.py  connection.py  models.py
src/cortex/jobs/: __init__.py  manager.py  redis_store.py
src/cortex/models/: __init__.py  requests.py
src/cortex/routers/: __init__.py  chat.py  comparison.py  data_quality.py  documents.py  health.py  reports.py  summarization.py  upload.py
src/cortex/scripts/: __init__.py  seed_contexts.py  seed_documents.py  seed_tabular_data.py
src/cortex/services/: comparison_service.py  data_quality_service.py  document_service.py  qa_service.py  report_service.py  summarization_service.py
src/cortex/services/minio/: __init__.py  bronze.py  config.py  gold.py  helpers.py  query.py  service.py  silver.py
superset/: Dockerfile  superset_config.py
